# usb-vault

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_BUILDROOT.md  README_CPP.md  build_cpp.sh  config.toml  config_bookworm.toml  config_dietpi.toml  config_raspbian.toml  customize_minimal_image.sh  requirements.txt  setup_buildroot.sh  setup_minimal_buildroot.sh  setup_vaultusb_buildroot.sh
.cursor/rules/: windows.mdc
app/: __init__.py  auth.py  config.py  crypto.py  db.py  main.py  models.py  schemas.py  storage.py  system.py  wifi.py  wifi_helper.py
app/static/: app.js  style.css
app/templates/: base.html  dashboard.html  files.html  login.html  system.html  wifi.html
board/vaultusb/: Config.in
board/vaultusb/configs/: raspberrypi0_vaultusb_defconfig
board/vaultusb/package/vaultusb-cpp/: Config.in  vaultusb-cpp.mk
board/vaultusb/package/vaultusb_cpp/: Config.in  vaultusb_cpp.mk
board/vaultusb/patches/: cmdline.txt  config.txt  genimage.cfg  post-build.sh  post-image.sh
cpp/: CMakeLists.txt
cpp/include/: auth.h  config.h  crypto.h  database.h  http_server.h  models.h  storage.h  system.h  wifi.h
cpp/src/: auth.cpp  config.cpp  crypto.cpp  database.cpp  http_server.cpp  main.cpp  storage.cpp  system.cpp  wifi.cpp
networking/: dhcpcd.append.conf  dnsmasq-uap0.conf  dnsmasq-usb0.conf  hostapd.conf
scripts/: bootstrap_raspbian.sh  bootstrap_vault.sh  enable_usb_gadget.sh  install_dietpi.sh  install_raspbian.sh  make_cert.sh  setup_buildroot.sh  setup_networking.sh
src/: Makefile  vaultusb.c
systemd/: dnsmasq@.service  hostapd.service  uap0-setup.service  vaultusb.service
